src/objects/ints__TransUnion_Credit_Pull_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the Credentials are being used for TransUnion Production Server.</inlineHelpText>
        <label>Is Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Member_Code__c</fullName>
        <label>Member Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TransUnion Credit Pull Parameters</label>
</CustomObject>